# iploolup

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  CODE_GUIDE.md  Cargo.toml  DESIGN_AND_FEATURES.md  DEVELOPMENT_GUIDE.md  Dockerfile  debug_and_fix_summary.md  docker-compose.yml  implementation_status.md  log.md  project_status.md  readme.md  refactoring_plan.md  rust-ddns-status.md
config/: ddns.example.json  ddns.json  default.toml
src/: constants.rs  error.rs  lib.rs  main.rs
src/api/: cloudflare.rs  ddns.rs  ddns_config.rs  ip.rs  mod.rs
src/application/: error.rs  events.rs  factories.rs  mod.rs
src/application/config/: mod.rs  service.rs
src/application/ddns/: mod.rs  service.rs
src/config/: ddns.rs  mod.rs  settings.rs
src/domain/: error.rs  error_context.rs  mod.rs
src/domain/config/: ddns.rs  mod.rs  settings.rs
src/domain/dns/: mod.rs  service.rs
src/domain/http/: client.rs  mod.rs
src/domain/ip/: mod.rs  service.rs
src/domain/state/: mod.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: cloudflare.rs  mod.rs
src/infrastructure/config/: mod.rs  repository.rs
src/infrastructure/dns/: cloudflare_service.rs  mod.rs
src/infrastructure/http/: mod.rs  reqwest_client.rs  (+1 more)
src/interfaces/: mod.rs
src/services/: ddns.rs  ddns_config.rs  ip.rs  ip_service.rs  mod.rs  web_ui.rs
static/: ddns-manager.html  index.html
static/css/: main.css  modern.css  style.css
static/js/: api.js  app.js  ui.js
tests/: api_endpoints_test.rs  config_loader_test.rs  ddns_service_test.rs  dns_service_test.rs  event_system_test.rs  http_client_test.rs  lib.rs
tests/application/: ddns_service_tests.rs  mod.rs
tests/domain/: config_tests.rs  mod.rs
tests/infrastructure/: dns_service_tests.rs  ip_service_tests.rs  mod.rs
(+14 files in other folders)
