[package]
name = "cloudflare-ddns"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["full", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
config = "0.13"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
dotenv = "0.15"
once_cell = "1.17"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
backoff = { version = "0.4", features = ["tokio"] }
regex = "1.10"
url = "2.5"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
proptest = "1.0"
rstest = "0.18"
httpmock = "0.6"